# Lycan

./: .gitignore  Cargo.toml  README.archived.md  README.md  REPO_SPLIT_NOTES.md  agent.md
.github/workflows/: ci.yml
benchmarks/: README.md
docs/: GUIDE.md
docs/language/: capabilities.md  syntax.md  (+2 more)
examples/: README.md  analytics.lyc  analytics.lycs  api-demo.sh  calculator.lyc  calculator.lycs  demo-api-regression.sh  demo-appliance.sh  demo-boundary-api-tests.sh  demo-context-memory.sh  demo-docker-quickstart.sh  demo-evolve.sh  demo-sandbox.sh  demo_adaptive.lyc  demo_adaptive.lycs  demo_adaptive_api_router_attack.lycs  demo_adaptive_api_router_attack.sh  demo_adaptive_routing.lyc  demo_adaptive_routing.lycs  demo_alcubierre.lyc  demo_alcubierre.lycs  demo_antiviral_target_selection.lyc  demo_antiviral_target_selection.lycs  demo_autoscaler.lyc  demo_autoscaler.lycs  demo_blackhole.lyc  demo_capability_nav.lyc  demo_capability_nav.lycs  demo_capability_pack.lyc  demo_classifier.lyc  demo_classifier.lycs  demo_compiler_optimizer.lyc  demo_compiler_optimizer.lycs  demo_control_chaos.lyc  demo_control_chaos.lycs  demo_cr3bp.lyc  demo_cr3bp.lycs  demo_cyber_triage.lyc  demo_cyber_triage.lycs  demo_edge_of_chaos.lyc  (+73 more)
src/: agent.rs  ast.rs  binary.rs  capabilities.rs  capsule.rs  context.rs  environment.rs  error.rs  evolution_loop.rs  evolve.rs  graph.rs  graph_compiler.rs  graph_executor.rs  interpreter.rs  lambert.rs  learning.rs  lexer.rs  lib.rs  main.rs  optimizer.rs  parser.rs  server.rs  store.rs  token.rs  value.rs  verifier.rs
tests/: integration.rs
(+26 files in other folders)
