[package]
name = "lycan"
version = "0.2.2"
edition = "2024"
description = "AI-native machine execution language"
license = "Apache-2.0"

[lib]
name = "lycan"
path = "src/lib.rs"

[[bin]]
name = "lycan"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1"
sha2 = "0.10"
tiny_http = "0.12"
ureq = "2"
