[package]
name = "lycan"
version = "0.2.3"
edition = "2024"
description = "AI-native machine execution language"
license = "Apache-2.0"

[lib]
name = "lycan"
path = "src/lib.rs"

[[bin]]
name = "lycan"
path = "src/main.rs"

[dependencies]
getrandom = "0.2"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tiny_http = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
ureq = "2"
